@@ -3,6 +3,9 @@ useDynLib(Rllvm)
 import(methods)
 import(RAutoGenRunTime)
 
+export(llvmDump)
+exportMethods(llvmDump)
+
 exportClasses(
   AllocaInst,
   BasicBlock,
@@ -393,3 +396,5 @@ export(InitializeAllTargets, InitializeAllTargetMCs, InitializeAllAsmPrinters, I
 export(getDefaultTargetTriple)
 
 S3method(flush, formatted_raw_ostream)
+
+export(createFPTrunc)
