@@ -1,5 +1,11 @@
 Version 0.6-0
 
+	*  added support specifying address space when creating pointer types
+	
+	*  added CreateFPTrunc()
+
+	*  added llvmDump() to examine instructions in IR form
+
 	*  added setMetadata(), getMetadata() and getNumOperands() & getOperands()
 
 	*  eraseFromParent(), removeFromParent()
